Product Admin Page

--- a/src/Shop/Features/Admin/Index.cshtml
+++ b/src/Shop/Features/Admin/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model TModel
-
-@{
-    ViewBag.Title = "title";
+﻿@{
+    ViewBag.Title = "Shop Admin";
     Layout = "_Layout";
 }
 
-<h2>title</h2>
+<h2>Shop Admin</h2>
+
+@Html.ActionLink("Products", "Products", "Admin")
