--- a/src/Shop/Features/Admin/Products.cshtml
+++ b/src/Shop/Features/Admin/Products.cshtml
@@ -8,7 +8,7 @@
 
 <h2>Products</h2>
 
-@Html.ActionLink("Add Product", "AddProduct", "Admin")
+@Html.ActionLink("Add Product", "ProductCreate", "Admin")
 
 @foreach (var product in Model.Products)
 {
