--- a/src/Shop/Features/Shared/_Layout.cshtml
+++ b/src/Shop/Features/Shared/_Layout.cshtml
@@ -4,20 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
-    
-    <link rel="stylesheet" 
+
+    <link rel="stylesheet"
           href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
           asp-fallback-href="~/lib/bootstrap/bootstrap.min.css"
-          asp-fallback-test-class="sr-only" 
-          asp-fallback-test-property="position" 
+          asp-fallback-test-class="sr-only"
+          asp-fallback-test-property="position"
           asp-fallback-test-value="absolute" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
-<div>
-    <div class="container-fluid">
-    @RenderBody()
+    <div>
+        <div class="container-fluid">
+            @RenderBody()
+        </div>
     </div>
-</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
 </html>
