--- a/src/Shop/Features/Product/ProductCreate.cshtml
+++ b/src/Shop/Features/Product/ProductCreate.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Shop.Features
 @using Shop.Features.Admin
-@model ProductCreate.Command
+@using Shop.Features.Product
+@model Shop.Features.Product.ProductCreate.Command
 
 @{
     ViewBag.Title = "Create Product";
