Add ability to delete a product

--- a/src/Shop/Features/Admin/Index.cshtml
+++ b/src/Shop/Features/Admin/Index.cshtml
@@ -5,4 +5,4 @@
 
 <h2>Shop Admin</h2>
 
-@Html.ActionLink("Products", "Manage", "Product")
+@Html.ActionLink("Products", "ManageProducts", "Product")
