--- a/src/Shop/Features/Product/ProductCreate.cshtml
+++ b/src/Shop/Features/Product/ProductCreate.cshtml
@@ -10,7 +10,7 @@
 <h2>Create Product</h2>
 
 
-@using (Html.BeginForm("productcreate", "Admin", FormMethod.Post))
+@using (Html.BeginForm("productcreate", "Product", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
