--- a/src/Shop/Features/Product/ProductCreate.cshtml
+++ b/src/Shop/Features/Product/ProductCreate.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Shop.Features
-@using Shop.Features.Admin
 @using Shop.Features.Product
-@model Shop.Features.Product.ProductCreate.Command
+@model ProductCreate.Command
 
 @{
     ViewBag.Title = "Create Product";
