--- a/src/Shop/Features/Product/ManageProducts.cshtml
+++ b/src/Shop/Features/Product/ManageProducts.cshtml
@@ -16,6 +16,7 @@
     <div>
         <h3>@product.ProductName - @string.Format("{0:C}", product.Price)</h3>
         <div>@product.ProductShortDescription</div>
+        @Html.ActionLink("Edit Product", "ProductEdit", "Product", new { productReference = product.ProductReference })
         @Html.ActionLink("Delete Product", "ProductDelete", "Product", new { productReference = product.ProductReference })
 
     </div>
