--- a/src/Shop/Features/Product/ProductEdit.cshtml
+++ b/src/Shop/Features/Product/ProductEdit.cshtml
@@ -1,21 +1,22 @@
 ﻿@using Shop.Features
-@using Shop.Features.Product
-@model ProductCreate.Command
+@model Shop.Features.Product.ProductEdit.Command
 
 @{
-    ViewBag.Title = "Create Product";
+    ViewBag.Title = "Edit Product";
+    Layout = "_Layout";
 }
 
-<h2>Create Product</h2>
+<h2>Edit Product</h2>
 
-
-@using (Html.BeginForm("productcreate", "Product", FormMethod.Post))
+@using (Html.BeginForm("productedit", "Product", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         <h4>Product</h4>
         <hr />
+        
+        @Html.HiddenFor(m=>m.ProductReference)
         @Html.ValidationDiv()
         @Html.FormBlock(m => m.ProductName)
         @Html.FormBlock(m => m.ProductShortDescription)
@@ -27,7 +28,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -36,4 +37,3 @@
 <div>
     @Html.ActionLink("Back to List", "ManageProducts", "Product")
 </div>
-
