Add validation so multiple customers cannot be created with the same email address

--- a/src/Shop/Features/Customer/CustomerCreate.cshtml
+++ b/src/Shop/Features/Customer/CustomerCreate.cshtml
@@ -2,7 +2,7 @@
 @model Shop.Features.Customer.CustomerCreate.Command
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Customer Register";
     Layout = "_Layout";
 }
 
