--- a/src/Shop/Features/Shared/_Layout.cshtml
+++ b/src/Shop/Features/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js" integrity="sha256-jCRPoAgIIooCTnLmaSyKMPrFgFh6/T0e8c3i+KkZZ6U=" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
 </html>
